--- a/livres.html
+++ b/livres.html
@@ -190,23 +190,23 @@
       </figcaption>
     </figure>
 
-      <!--Livre 12-->
-      <figure>
-        <a href="https://www.amazon.fr/Tr%C3%B4ne-fer-lInt%C3%A9grale-game-Thrones/dp/2756408522/ref=pd_sim_14_7?_encoding=UTF8&pd_rd_i=2756408522&pd_rd_r=3f9c3e44-5f05-11e9-9ab7-adaade3fec5d&pd_rd_w=WTIGB&pd_rd_wg=Xc3GJ&pf_rd_p=7e133c34-2a2a-4f4f-8372-6a26c70ca073&pf_rd_r=DY62KACJE73J3FTNY187&psc=1&refRID=DY62KACJE73J3FTNY187"
-          target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71lZsWrGaQL.jpg" alt="L'intégrale du Trône de Fer - Partie 2" class="books" /></a>
-        <figcaption>
-          George R.R. Martin
-        </figcaption>
-        <figcaption>
-          Le Trône de Fer
-        </figcaption>
-        <figcaption>
-          L'intégrale - Partie 2
-        </figcaption>
-        <figcaption>
-          22,90€
-        </figcaption>
-      </figure>
+    <!--Livre 12-->
+    <figure>
+      <a href="https://www.amazon.fr/Tr%C3%B4ne-fer-lInt%C3%A9grale-game-Thrones/dp/2756408522/ref=pd_sim_14_7?_encoding=UTF8&pd_rd_i=2756408522&pd_rd_r=3f9c3e44-5f05-11e9-9ab7-adaade3fec5d&pd_rd_w=WTIGB&pd_rd_wg=Xc3GJ&pf_rd_p=7e133c34-2a2a-4f4f-8372-6a26c70ca073&pf_rd_r=DY62KACJE73J3FTNY187&psc=1&refRID=DY62KACJE73J3FTNY187"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71lZsWrGaQL.jpg" alt="L'intégrale du Trône de Fer - Partie 2" class="books" /></a>
+      <figcaption>
+        George R.R. Martin
+      </figcaption>
+      <figcaption>
+        Le Trône de Fer
+      </figcaption>
+      <figcaption>
+        L'intégrale - Partie 2
+      </figcaption>
+      <figcaption>
+        22,90€
+      </figcaption>
+    </figure>
   </div>
 
   <div class="booksLine">
@@ -864,52 +864,54 @@
 
 
   <div class="booksLine">
-    <!--Livre 53
-  <figure>
-    <a href="https://www.amazon.fr/Piranhas-Roberto-Saviano/dp/2072754046/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=103TPAAOMEFO9&keywords=piranhas+saviano&qid=1576243714&sprefix=piranhas%2Caps%2C145&sr=8-1" target="_blank"> <img
-        src="https://images-na.ssl-images-amazon.com/images/I/710Ja-jidPL.jpg" alt="Piranhas" class="books" /></a>
-    <figcaption>
-      Roberto Saviano
-    </figcaption>
-    <figcaption>
-      Piranhas
-    </figcaption>
-    <figcaption>
-      22,00€
-    </figcaption>
-  </figure>-->
+    <!--Livre 53-->
+    <figure>
+      <a href="https://www.amazon.fr/mano-negra-obscures-contr%C3%B4lent-football/dp/2755640197/ref=pd_sim_14_6/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2755640197&pd_rd_r=235e5697-56a9-48c6-b2b9-bf1a364899ac&pd_rd_w=WyNZU&pd_rd_wg=rWfyp&pf_rd_p=13666dbd-eacc-4961-ae51-8b11476bba29&pf_rd_r=5HNSAX5WPC8Y512Y15C7&psc=1&refRID=5HNSAX5WPC8Y512Y15C7"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61I3dBZMUXL.jpg" alt="La Mano Negra" class="books" /></a>
+      <figcaption>
+        Romain Molina
+      </figcaption>
+      <figcaption>
+        La mano negra
+      </figcaption>
+      <figcaption>
+        Ces forces obscures qui contrôlent le football mondial
+      </figcaption>
+      <figcaption>
+        17,00€
+      </figcaption>
+    </figure>
 
 
-    <!--Livre 54
-  <figure>
-    <a href="https://www.amazon.fr/Baiser-f%C3%A9roce-Roberto-Saviano/dp/207276582X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=baiser+feroce&qid=1576249142&sr=8-1" target="_blank"> <img
-        src="https://images-na.ssl-images-amazon.com/images/I/81PXIc4BjWL.jpg" alt="Baiser féroce" class="books" /></a>
-    <figcaption>
-      Roberto Saviano
-    </figcaption>
-    <figcaption>
-      Baiser féroce
-    </figcaption>
-    <figcaption>
-      22,00€
-    </figcaption>
-  </figure>-->
+    <!--Livre 54-->
+    <figure>
+      <a href="https://www.amazon.fr/Autopsie-sport-fran%C3%A7ais-Daniel-Riolo/dp/2755636106/ref=asap_bc?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51-XVoya8rL.jpg" alt="Autopsie du sport français"
+          class="books" /></a>
+      <figcaption>
+        Daniel Riolo
+      </figcaption>
+      <figcaption>
+        Autopsie du sport français
+      </figcaption>
+      <figcaption>
+        18,50€
+      </figcaption>
+    </figure>
 
 
-    <!--Livre 55
-  <figure>
-    <a href="https://www.amazon.fr/Gomorra-lempire-camorra-Roberto-Saviano/dp/2072798108/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1576243714&sr=8-3" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81OAmpbvz5L.jpg"
-        alt="Gomorra" class="books" /></a>
-    <figcaption>
-      Roberto Saviano
-    </figcaption>
-    <figcaption>
-      Gomorra
-    </figcaption>
-    <figcaption>
-      9,50€
-    </figcaption>
-  </figure>-->
+    <!--Livre 55-->
+    <figure>
+      <a href="https://www.amazon.fr/L%C3%A9nigme-Tuchel-Daniel-Riolo/dp/2755640626/ref=asap_bc?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61XqB3uql4L.jpg" alt="L'énigme Tuchel" class="books" /></a>
+      <figcaption>
+        Polo Breitner et Daniel Riolo
+      </figcaption>
+      <figcaption>
+        L'énigme Tuchel
+      </figcaption>
+      <figcaption>
+        16,95€
+      </figcaption>
+    </figure>
 
 
     <!--Livre 56
