--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 30 décembre 2019
+    Mise à jour liste le 17 février 2020
   </p>
   <p class="dateMAJ2">
     Mise à jour prix le 23 novembre 2019
