--- a/livres.html
+++ b/livres.html
@@ -931,66 +931,382 @@
   </div>
 
 
-  <!--  <div class="booksLine">
-Livre 57
-  <figure>
-    <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
-        src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
-    <figcaption>
-      Francis Scott Fitzgerald
-    </figcaption>
-    <figcaption>
-      Tendre est la nuit
-    </figcaption>
-    <figcaption>
-      7,20€
-    </figcaption>
-  </figure>
-  -->
+  <div class="booksLine">
+    <!-- Livre 57-->
+    <figure>
+      <a href="https://www.amazon.fr/Gagner-cest-simple-r%C3%A8gles-coaching/dp/2501147626/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=BLT3A07GWKSU&keywords=massimiliano+allegri&qid=1582479774&sprefix=massimil%2Caps%2C148&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71lr6-gqfHL.jpg" alt="Allegri" class="books" /></a>
+      <figcaption>
+        Massimiliano Allegri
+      </figcaption>
+      <figcaption>
+        Gagner c'est si simple
+      </figcaption>
+      <figcaption>
+        18,90€
+      </figcaption>
+    </figure>
 
-  <!--Livre 58
-  <figure>
-    <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
-    <figcaption>
-      Saphia Azzeddine
-    </figcaption>
-    <figcaption>
-      Combien veux-tu m'épouser ?
-    </figcaption>
-    <figcaption>
-      17,90€
-    </figcaption>
-  </figure>
-  -->
 
-  <!--Livre 59
+    <!--Livre 58-->
+    <figure>
+      <a href="https://www.amazon.fr/Retour-int%C3%A9rieur-Fabien-Galthi%C3%A9/dp/2290106488/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2DE2Q3FNH2H0Z&keywords=fabien+galthi%C3%A9&qid=1582479956&sprefix=fabien+gal%2Caps%2C144&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61cdYaEeEoL.jpg" alt="Fabien Galthié" class="books" /></a>
+      <figcaption>
+        Fabien Galthié
+      </figcaption>
+      <figcaption>
+        Retour intérieur
+      </figcaption>
+      <figcaption>
+        6,00€
+      </figcaption>
+    </figure>
+
+
+    <!--Livre 59-->
   <figure>
-    <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
+    <a href="https://www.amazon.fr/M%C3%A9moires-dun-perfectionniste-Jonny-Wilkinson/dp/2709642212/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71R6bw1avqL.jpg" alt="Wilkinson" class="books" /></a>
     <figcaption>
-      Saphia Azzeddine
+      Jonny Wilkinson
     </figcaption>
     <figcaption>
-      Bilqiss
+      Mémoires d'un perfectionniste
     </figcaption>
     <figcaption>
-      18,00€
+      20,00€
     </figcaption>
   </figure>
+
+
+    <!--Livre 60-->
+  <figure>
+    <a href="https://www.amazon.fr/Dan-Carter-Autobiographie-l%C3%A9gende-Blacks/dp/2501119878/ref=pd_sim_14_3/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2501119878&pd_rd_r=ba4863d5-b866-4e2f-8f86-56891c02ccc8&pd_rd_w=GL8dH&pd_rd_wg=qY751&pf_rd_p=13666dbd-eacc-4961-ae51-8b11476bba29&pf_rd_r=3KXVTV471Z9S7E4WCPX9&psc=1&refRID=3KXVTV471Z9S7E4WCPX9" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71e-ymRSskL.jpg" alt="Dan Carter" class="books" /></a>
+    <figcaption>
+      Dan Carter
+    </figcaption>
+    <figcaption>
+      Autobiographie d'une légende des All Blacks
+    </figcaption>
+    <figcaption>
+      7,50€
+    </figcaption>
+  </figure>
+</div>
+
+
+      <div class="booksLine">
+<!--Livre 61-->
+<figure>
+  <a href="https://www.amazon.fr/Cadrages-d%C3%A9bordements-Marc-Lievremont/dp/2732451959/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img
+      src="https://images-na.ssl-images-amazon.com/images/I/61GMm6KXJNL.jpg" alt="Lievremont" class="books" /></a>
+  <figcaption>
+    Marc Lievremont
+  </figcaption>
+  <figcaption>
+    Cadrages & débordements
+  </figcaption>
+  <figcaption>
+    18,25€
+  </figcaption>
+</figure>
+
+
+    <!--Livre 62-->
+<figure>
+  <a href="https://www.amazon.fr/T%C3%AAte-haute-Mathieu-BASTAREAUD/dp/2221157915/ref=pd_sim_14_6/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2221157915&pd_rd_r=ba4863d5-b866-4e2f-8f86-56891c02ccc8&pd_rd_w=GL8dH&pd_rd_wg=qY751&pf_rd_p=13666dbd-eacc-4961-ae51-8b11476bba29&pf_rd_r=3KXVTV471Z9S7E4WCPX9&psc=1&refRID=3KXVTV471Z9S7E4WCPX9" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61BlyPV2aPL.jpg" alt="Mathieu Bastareaud" class="books" /></a>
+  <figcaption>
+    Mathieu Bastareaud
+  </figcaption>
+  <figcaption>
+Tête haute
+  </figcaption>
+  <figcaption>
+    18,00€
+  </figcaption>
+</figure>
+
+
+    <!--Livre 63-->
+<figure>
+  <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
+  <figcaption>
+    Saphia Azzeddine
+  </figcaption>
+  <figcaption>
+    Bilqiss
+  </figcaption>
+  <figcaption>
+    18,00€
+  </figcaption>
+</figure>
+
+
+    <!--Livre 64-->
+<figure>
+  <a href="https://www.amazon.fr/Jonah-Lomu-Lautobiographie-In%C3%A9dite/dp/2378150121/ref=pd_sim_14_6/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2378150121&pd_rd_r=a57d9e74-2645-4b86-b2fb-ecef75dd2b1d&pd_rd_w=jHUsl&pd_rd_wg=TdRRG&pf_rd_p=13666dbd-eacc-4961-ae51-8b11476bba29&pf_rd_r=823PM7P16X07V6XKVS45&psc=1&refRID=823PM7P16X07V6XKVS45" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71yVPuRdi9L.jpg" alt="Jonah Lomu" class="books" /></a>
+  <figcaption>
+    Jonah Lomu
+  </figcaption>
+  <figcaption>
+    L'autobiographie Inédite
+  </figcaption>
+  <figcaption>
+    9,40€
+  </figcaption>
+</figure>
+</div>
+
+
+     <div class="booksLine">
+<!--Livre 65-->
+<figure>
+  <a href="https://www.amazon.fr/Ma-petite-%C3%A9toile-S%C3%A9bastien-Chabal/dp/208124148X/ref=pd_sim_14_8?_encoding=UTF8&pd_rd_i=208124148X&pd_rd_r=a57d9e74-2645-4b86-b2fb-ecef75dd2b1d&pd_rd_w=jHUsl&pd_rd_wg=TdRRG&pf_rd_p=13666dbd-eacc-4961-ae51-8b11476bba29&pf_rd_r=823PM7P16X07V6XKVS45&psc=1&refRID=823PM7P16X07V6XKVS45" target="_blank"> <img
+      src="https://images-na.ssl-images-amazon.com/images/I/71vljEok2-L.jpg" alt="Chabal" class="books" /></a>
+  <figcaption>
+    Sébastien Chabal
+  </figcaption>
+  <figcaption>
+    Ma Petite Etoile
+  </figcaption>
+  <figcaption>
+    20,20€
+  </figcaption>
+</figure>
+
+
+    <!--Livre 66-->
+<figure>
+  <a href="https://www.amazon.fr/Ma-Mauvaise-r%C3%A9putation-Mourad-Boudjellal/dp/2732455199/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1582480208&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61HqFVp1hDL.jpg" alt="Mourad Boudjellal" class="books" /></a>
+  <figcaption>
+    Mourad Boudjellal
+  </figcaption>
+  <figcaption>
+    Ma Mauvaise réputation
+  </figcaption>
+  <figcaption>
+    18,00€
+  </figcaption>
+</figure>
+
+
+    <!--Livre 67-->
+<figure>
+  <a href="https://www.amazon.fr/le%C3%A7ons-leadership-Christophe-Urios-Champion/dp/2212571399/ref=pd_sbs_14_9?_encoding=UTF8&pd_rd_i=2212571399&pd_rd_r=644e4cf9-4889-4054-94f3-40d4d065172d&pd_rd_w=FpfV7&pd_rd_wg=5Xt1u&pf_rd_p=72159c7a-2bb2-4a15-aa35-b315ce8f5c64&pf_rd_r=HV2ZNNW3WNVWJR421B66&psc=1&refRID=HV2ZNNW3WNVWJR421B66" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81cM-e-aThL.jpg" alt="Christophe Urios" class="books" /></a>
+  <figcaption>
+    Christophe Urios
+  </figcaption>
+  <figcaption>
+    15 leçons de leadership
+  </figcaption>
+  <figcaption>
+    19,90€
+  </figcaption>
+</figure>
+
+
+    <!--Livre 68-->
+<figure>
+  <a href="https://www.amazon.fr/pr%C3%A9sident-devrait-dire-plus-souvent/dp/2221193075/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=boudjellal&qid=1582480208&s=books&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61f0iuWp%2BmL.jpg" alt="Mourad Boudjellal" class="books" /></a>
+  <figcaption>
+    Mourad Boudjellal
+  </figcaption>
+  <figcaption>
+    Un président devrait dire ça plus souvent
+  </figcaption>
+  <figcaption>
+    19,00€
+  </figcaption>
+</figure>
+</div>
+
+
+    <!--  <div class="booksLine">
+Livre 69
+<figure>
+  <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
+      src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
+  <figcaption>
+    Francis Scott Fitzgerald
+  </figcaption>
+  <figcaption>
+    Tendre est la nuit
+  </figcaption>
+  <figcaption>
+    7,20€
+  </figcaption>
+</figure>
 -->
 
-  <!--Livre 60
-  <figure>
-    <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
-    <figcaption>
-      Saphia Azzeddine
-    </figcaption>
-    <figcaption>
-      Sa mère
-    </figcaption>
-    <figcaption>
-      19,00€
-    </figcaption>
-  </figure>
+    <!--Livre 70
+<figure>
+  <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
+  <figcaption>
+    Saphia Azzeddine
+  </figcaption>
+  <figcaption>
+    Combien veux-tu m'épouser ?
+  </figcaption>
+  <figcaption>
+    17,90€
+  </figcaption>
+</figure>
+-->
+
+    <!--Livre 71
+<figure>
+  <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
+  <figcaption>
+    Saphia Azzeddine
+  </figcaption>
+  <figcaption>
+    Bilqiss
+  </figcaption>
+  <figcaption>
+    18,00€
+  </figcaption>
+</figure>
+-->
+
+    <!--Livre 72
+<figure>
+  <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
+  <figcaption>
+    Saphia Azzeddine
+  </figcaption>
+  <figcaption>
+    Sa mère
+  </figcaption>
+  <figcaption>
+    19,00€
+  </figcaption>
+</figure>
+</div>
+-->
+
+    <!--  <div class="booksLine">
+Livre 73
+<figure>
+  <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
+      src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
+  <figcaption>
+    Francis Scott Fitzgerald
+  </figcaption>
+  <figcaption>
+    Tendre est la nuit
+  </figcaption>
+  <figcaption>
+    7,20€
+  </figcaption>
+</figure>
+-->
+
+    <!--Livre 74
+<figure>
+  <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
+  <figcaption>
+    Saphia Azzeddine
+  </figcaption>
+  <figcaption>
+    Combien veux-tu m'épouser ?
+  </figcaption>
+  <figcaption>
+    17,90€
+  </figcaption>
+</figure>
+-->
+
+    <!--Livre 75
+<figure>
+  <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
+  <figcaption>
+    Saphia Azzeddine
+  </figcaption>
+  <figcaption>
+    Bilqiss
+  </figcaption>
+  <figcaption>
+    18,00€
+  </figcaption>
+</figure>
+-->
+
+    <!--Livre 76
+<figure>
+  <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
+  <figcaption>
+    Saphia Azzeddine
+  </figcaption>
+  <figcaption>
+    Sa mère
+  </figcaption>
+  <figcaption>
+    19,00€
+  </figcaption>
+</figure>
+</div>
+-->
+
+    <!--  <div class="booksLine">
+Livre 77
+<figure>
+  <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
+      src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
+  <figcaption>
+    Francis Scott Fitzgerald
+  </figcaption>
+  <figcaption>
+    Tendre est la nuit
+  </figcaption>
+  <figcaption>
+    7,20€
+  </figcaption>
+</figure>
+-->
+
+    <!--Livre 78
+<figure>
+  <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
+  <figcaption>
+    Saphia Azzeddine
+  </figcaption>
+  <figcaption>
+    Combien veux-tu m'épouser ?
+  </figcaption>
+  <figcaption>
+    17,90€
+  </figcaption>
+</figure>
+-->
+
+    <!--Livre 79
+<figure>
+  <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
+  <figcaption>
+    Saphia Azzeddine
+  </figcaption>
+  <figcaption>
+    Bilqiss
+  </figcaption>
+  <figcaption>
+    18,00€
+  </figcaption>
+</figure>
+-->
+
+    <!--Livre 80
+<figure>
+  <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
+  <figcaption>
+    Saphia Azzeddine
+  </figcaption>
+  <figcaption>
+    Sa mère
+  </figcaption>
+  <figcaption>
+    19,00€
+  </figcaption>
+</figure>
 </div>
 -->
 
