--- a/livres.html
+++ b/livres.html
@@ -1121,52 +1121,52 @@ Tête haute
 </div>
 
 
-    <!--  <div class="booksLine">
-Livre 69
+      <div class="booksLine">
+<!--Livre 69-->
 <figure>
-  <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
-      src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
+  <a href="https://www.amazon.fr/Quand-jeu-%C3%A9tait-%C3%A0-nous/dp/B06XNJ46BR/ref=pd_rhf_ee_p_img_8?_encoding=UTF8&psc=1&refRID=CMRSC79SAF39J9CE8C12" target="_blank"> <img
+      src="https://images-na.ssl-images-amazon.com/images/I/81P4FLZ8Y3L.jpg" alt="Quand le jeu était à nous" class="books" /></a>
   <figcaption>
-    Francis Scott Fitzgerald
+    Larry Bird et Earvin Johnson
   </figcaption>
   <figcaption>
-    Tendre est la nuit
+    Quand le jeu était à nous
   </figcaption>
   <figcaption>
-    7,20€
+    22,00€
   </figcaption>
 </figure>
--->
 
-    <!--Livre 70
-<figure>
-  <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
-  <figcaption>
-    Saphia Azzeddine
-  </figcaption>
-  <figcaption>
-    Combien veux-tu m'épouser ?
-  </figcaption>
-  <figcaption>
-    17,90€
-  </figcaption>
-</figure>
--->
 
-    <!--Livre 71
+    <!--Livre 70-->
 <figure>
-  <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
+  <a href="https://www.amazon.fr/Trashtalk-So-Press/dp/2501130413/ref=pd_sbs_14_2/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2501130413&pd_rd_r=87835fe5-383e-45d2-89e4-0cc54d3cbedc&pd_rd_w=PeQay&pd_rd_wg=p6ni1&pf_rd_p=72159c7a-2bb2-4a15-aa35-b315ce8f5c64&pf_rd_r=TK8NDFH57G90ZP8PXCBM&psc=1&refRID=TK8NDFH57G90ZP8PXCBM" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Mec2WIe6L.jpg" alt="Trashtalk" class="books" /></a>
   <figcaption>
-    Saphia Azzeddine
+    Trashtalk
   </figcaption>
   <figcaption>
-    Bilqiss
+    Le Basket Américain en 300 listes folles
   </figcaption>
   <figcaption>
-    18,00€
+    19,90€
   </figcaption>
 </figure>
--->
+
+
+    <!--Livre 71-->
+<figure>
+  <a href="https://www.amazon.fr/Bad-as-I-Wanna-Be/dp/0440222664/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81EJxqBKNfL.jpg" alt="Dennis Rodman" class="books" /></a>
+  <figcaption>
+    Dennis Rodman
+  </figcaption>
+  <figcaption>
+    Bad As I Wanna Be
+  </figcaption>
+  <figcaption>
+    8,75€
+  </figcaption>
+</figure>
+
 
     <!--Livre 72
 <figure>
@@ -1180,9 +1180,9 @@ Livre 69
   <figcaption>
     19,00€
   </figcaption>
-</figure>
+</figure>-->
 </div>
--->
+
 
     <!--  <div class="booksLine">
 Livre 73
