--- a/livres.html
+++ b/livres.html
@@ -1148,22 +1148,6 @@
 
     <!--Livre 70-->
     <figure>
-      <a href="https://www.amazon.fr/Trashtalk-So-Press/dp/2501130413/ref=pd_sbs_14_2/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2501130413&pd_rd_r=87835fe5-383e-45d2-89e4-0cc54d3cbedc&pd_rd_w=PeQay&pd_rd_wg=p6ni1&pf_rd_p=72159c7a-2bb2-4a15-aa35-b315ce8f5c64&pf_rd_r=TK8NDFH57G90ZP8PXCBM&psc=1&refRID=TK8NDFH57G90ZP8PXCBM"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Mec2WIe6L.jpg" alt="Trashtalk" class="books" /></a>
-      <figcaption>
-        Trashtalk
-      </figcaption>
-      <figcaption>
-        Le Basket Américain en 300 listes folles
-      </figcaption>
-      <figcaption>
-        19,90€
-      </figcaption>
-    </figure>
-
-
-    <!--Livre 71-->
-    <figure>
       <a href="https://www.amazon.fr/Bad-as-I-Wanna-Be/dp/0440222664/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81EJxqBKNfL.jpg" alt="Dennis Rodman" class="books" /></a>
       <figcaption>
         Dennis Rodman
@@ -1176,20 +1160,36 @@
       </figcaption>
     </figure>
 
+    <!--Livre 71-->
+    <figure>
+      <a href="https://www.amazon.fr/Kobe-Bryant-Mamba-mentality-fa%C3%A7on/dp/2755643323/ref=pd_sim_14_5/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2755643323&pd_rd_r=2a2bdb30-9e35-4577-bdb7-3daf8e3f9be7&pd_rd_w=WigFl&pd_rd_wg=gaL77&pf_rd_p=13666dbd-eacc-4961-ae51-8b11476bba29&pf_rd_r=FB6174GVNX2M5NH18EYM&psc=1&refRID=FB6174GVNX2M5NH18EYM"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41OGHVjhhLL.jpg" alt="Kobe 1" class="books" /></a>
+      <figcaption>
+        Kobe Bryant
+      </figcaption>
+      <figcaption>
+        Mamba mentality, ma façon de jouer
+      </figcaption>
+      <figcaption>
+        24,95€
+      </figcaption>
+    </figure>
 
-    <!--Livre 72
-<figure>
-  <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
-  <figcaption>
-    Saphia Azzeddine
-  </figcaption>
-  <figcaption>
-    Sa mère
-  </figcaption>
-  <figcaption>
-    19,00€
-  </figcaption>
-</figure>-->
+
+    <!--Livre 72-->
+    <figure>
+      <a href="https://www.amazon.fr/Kobe-Bryant-Showboat-Roland-Lazenby/dp/2378150105/ref=pd_bxgy_img_2/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2378150105&pd_rd_r=353cd523-760f-49ab-8ba2-310fb010b2e8&pd_rd_w=kQjrf&pd_rd_wg=bgEQa&pf_rd_p=da1675de-3974-4ba2-b26f-c06b987f79cb&pf_rd_r=FDPPK1RPS0DBF89E02KH&psc=1&refRID=FDPPK1RPS0DBF89E02KH"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81ulDCPahAL.jpg" alt="Kobe 2" class="books" /></a>
+      <figcaption>
+        Roland Lazenby
+      </figcaption>
+      <figcaption>
+        Kobe Bryant - Showboat
+      </figcaption>
+      <figcaption>
+        24,00€
+      </figcaption>
+    </figure>
   </div>
 
 
