--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -21,7 +21,7 @@
   </navbar>
 
   <div class="gamesLine">
-    <!--Jeu 1-->
+    <!--Jeu 1
     <figure>
       <a href="https://www.amazon.fr/Legend-Zelda-Links-Awakening/dp/B07QZFLVM7/ref=pd_sim_63_11?_encoding=UTF8&pd_rd_i=B07QZFLVM7&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&psc=1&refRID=NEV47M1RK88HJGD04JFG"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91DFZJlRAsL._SL1500_.jpg" alt="Zelda" class="game" /></a>
@@ -31,7 +31,7 @@
       <figcaption>
         44,49€ sur Amazon
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 2
     <figure>
