--- a/livres.html
+++ b/livres.html
@@ -764,7 +764,6 @@
       </figcaption>
     </figure>
 
-
     <!--Livre 47-->
     <figure>
       <a href="https://www.amazon.fr/R%C3%A9volte-rebelles-sport-Maryse-Ewanje-epee/dp/2755643641/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=revolte+maryse&qid=1571667765&sr=8-1" target="_blank"> <img
@@ -797,7 +796,6 @@
     </figure>
   </div>
 
-
   <div class="booksLine">
     <!-- Livre 49-->
     <figure>
@@ -814,7 +812,6 @@
       </figcaption>
     </figure>
 
-
     <!--Livre 50-->
     <figure>
       <a href="https://www.amazon.fr/Testament-marin-Olivier-Kersauson/dp/2749149347/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3GBHTVT7MA1WJ&keywords=olivier+de+kersauson&qid=1574555953&sprefix=olivier+de+k%2Caps%2C143&sr=8-1"
@@ -830,7 +827,6 @@
       </figcaption>
     </figure>
 
-
     <!--Livre 51-->
     <figure>
       <a href="https://www.amazon.fr/Je-chemine-avec-Hubert-Reeves/dp/2021438783" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61-BRC-JkTL.jpg" alt="Hubert Reeves" class="books" /></a>
@@ -844,7 +840,6 @@
         12,00€
       </figcaption>
     </figure>
-
 
     <!--Livre 52-->
     <figure>
@@ -861,7 +856,6 @@
       </figcaption>
     </figure>
   </div>
-
 
   <div class="booksLine">
     <!--Livre 53-->
@@ -882,7 +876,6 @@
       </figcaption>
     </figure>
 
-
     <!--Livre 54-->
     <figure>
       <a href="https://www.amazon.fr/Autopsie-sport-fran%C3%A7ais-Daniel-Riolo/dp/2755636106/ref=asap_bc?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51-XVoya8rL.jpg" alt="Autopsie du sport français"
@@ -898,7 +891,6 @@
       </figcaption>
     </figure>
 
-
     <!--Livre 55-->
     <figure>
       <a href="https://www.amazon.fr/L%C3%A9nigme-Tuchel-Daniel-Riolo/dp/2755640626/ref=asap_bc?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61XqB3uql4L.jpg" alt="L'énigme Tuchel" class="books" /></a>
@@ -912,7 +904,6 @@
         16,95€
       </figcaption>
     </figure>
-
 
     <!--Livre 56-->
     <figure>
@@ -930,7 +921,6 @@
     </figure>
   </div>
 
-
   <div class="booksLine">
     <!-- Livre 57-->
     <figure>
@@ -947,7 +937,6 @@
       </figcaption>
     </figure>
 
-
     <!--Livre 58-->
     <figure>
       <a href="https://www.amazon.fr/Retour-int%C3%A9rieur-Fabien-Galthi%C3%A9/dp/2290106488/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2DE2Q3FNH2H0Z&keywords=fabien+galthi%C3%A9&qid=1582479956&sprefix=fabien+gal%2Caps%2C144&sr=8-1"
@@ -963,7 +952,6 @@
       </figcaption>
     </figure>
 
-
     <!--Livre 59-->
     <figure>
       <a href="https://www.amazon.fr/M%C3%A9moires-dun-perfectionniste-Jonny-Wilkinson/dp/2709642212/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71R6bw1avqL.jpg"
@@ -978,7 +966,6 @@
         20,00€
       </figcaption>
     </figure>
-
 
     <!--Livre 60-->
     <figure>
@@ -996,7 +983,6 @@
     </figure>
   </div>
 
-
   <div class="booksLine">
     <!--Livre 61-->
     <figure>
@@ -1013,7 +999,6 @@
       </figcaption>
     </figure>
 
-
     <!--Livre 62-->
     <figure>
       <a href="https://www.amazon.fr/T%C3%AAte-haute-Mathieu-BASTAREAUD/dp/2221157915/ref=pd_sim_14_6/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2221157915&pd_rd_r=ba4863d5-b866-4e2f-8f86-56891c02ccc8&pd_rd_w=GL8dH&pd_rd_wg=qY751&pf_rd_p=13666dbd-eacc-4961-ae51-8b11476bba29&pf_rd_r=3KXVTV471Z9S7E4WCPX9&psc=1&refRID=3KXVTV471Z9S7E4WCPX9"
@@ -1029,7 +1014,6 @@
       </figcaption>
     </figure>
 
-
     <!--Livre 63-->
     <figure>
       <a href="https://www.amazon.fr/Shaq-sans-filtre-Shaquille-ONeal/dp/2378150806/ref=pd_rhf_ee_s_pd_crcd_0_29?_encoding=UTF8&pd_rd_i=2378150806&pd_rd_r=eca78fc6-c84b-4ab3-bd6a-81ccf087d655&pd_rd_w=BdGZb&pd_rd_wg=qt75z&pf_rd_p=8ca8d042-f0d8-48df-9f97-9b353e14887b&pf_rd_r=H9BMX9N3AGVDZ91WXGHB&psc=1&refRID=H9BMX9N3AGVDZ91WXGHB"
@@ -1044,7 +1028,6 @@
         21,90€
       </figcaption>
     </figure>
-
 
     <!--Livre 64-->
     <figure>
@@ -1062,7 +1045,6 @@
     </figure>
   </div>
 
-
   <div class="booksLine">
     <!--Livre 65-->
     <figure>
@@ -1079,7 +1061,6 @@
       </figcaption>
     </figure>
 
-
     <!--Livre 66-->
     <figure>
       <a href="https://www.amazon.fr/Ma-Mauvaise-r%C3%A9putation-Mourad-Boudjellal/dp/2732455199/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1582480208&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61HqFVp1hDL.jpg"
@@ -1095,7 +1076,6 @@
       </figcaption>
     </figure>
 
-
     <!--Livre 67-->
     <figure>
       <a href="https://www.amazon.fr/le%C3%A7ons-leadership-Christophe-Urios-Champion/dp/2212571399/ref=pd_sbs_14_9?_encoding=UTF8&pd_rd_i=2212571399&pd_rd_r=644e4cf9-4889-4054-94f3-40d4d065172d&pd_rd_w=FpfV7&pd_rd_wg=5Xt1u&pf_rd_p=72159c7a-2bb2-4a15-aa35-b315ce8f5c64&pf_rd_r=HV2ZNNW3WNVWJR421B66&psc=1&refRID=HV2ZNNW3WNVWJR421B66"
@@ -1110,7 +1090,6 @@
         19,90€
       </figcaption>
     </figure>
-
 
     <!--Livre 68-->
     <figure>
@@ -1128,7 +1107,6 @@
     </figure>
   </div>
 
-
   <div class="booksLine">
     <!--Livre 69-->
     <figure>
@@ -1144,7 +1122,6 @@
         22,00€
       </figcaption>
     </figure>
-
 
     <!--Livre 70-->
     <figure>
@@ -1175,7 +1152,6 @@
       </figcaption>
     </figure>
 
-
     <!--Livre 72-->
     <figure>
       <a href="https://www.amazon.fr/Kobe-Bryant-Showboat-Roland-Lazenby/dp/2378150105/ref=pd_bxgy_img_2/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2378150105&pd_rd_r=353cd523-760f-49ab-8ba2-310fb010b2e8&pd_rd_w=kQjrf&pd_rd_wg=bgEQa&pf_rd_p=da1675de-3974-4ba2-b26f-c06b987f79cb&pf_rd_r=FDPPK1RPS0DBF89E02KH&psc=1&refRID=FDPPK1RPS0DBF89E02KH"
@@ -1192,40 +1168,38 @@
     </figure>
   </div>
 
+  <div class="booksLine">
+    <!--Livre 73-->
+    <figure>
+      <a href="https://www.amazon.fr/absents-levez-doigt-Pierre-Benichou/dp/2246812666/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=pierre+benichou&qid=1585677816&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/81B4o3QKP5L.jpg" alt="Les absents, levez le doigt !" class="books" /></a>
+      <figcaption>
+        Pierre Benichou
+      </figcaption>
+      <figcaption>
+        Les absents, levez le doigt !
+      </figcaption>
+      <figcaption>
+        15,90€
+      </figcaption>
+    </figure>
 
-  <!--  <div class="booksLine">
-Livre 73
-<figure>
-  <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
-      src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
-  <figcaption>
-    Francis Scott Fitzgerald
-  </figcaption>
-  <figcaption>
-    Tendre est la nuit
-  </figcaption>
-  <figcaption>
-    7,20€
-  </figcaption>
-</figure>
--->
+    <!--Livre 74-->
+    <figure>
+      <a href="https://www.amazon.fr/Encore-instant-Claude-Sarraute/dp/2081390671/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1585677833&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61WT4n63tUL.jpg"
+          alt="Encore un instant" class="books" /></a>
+      <figcaption>
+        Claude Sarraute
+      </figcaption>
+      <figcaption>
+        Encore un instant
+      </figcaption>
+      <figcaption>
+        19,00€
+      </figcaption>
+    </figure>
 
-  <!--Livre 74
-<figure>
-  <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
-  <figcaption>
-    Saphia Azzeddine
-  </figcaption>
-  <figcaption>
-    Combien veux-tu m'épouser ?
-  </figcaption>
-  <figcaption>
-    17,90€
-  </figcaption>
-</figure>
--->
-
-  <!--Livre 75
+    <!--Livre 75
 <figure>
   <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
   <figcaption>
@@ -1240,7 +1214,7 @@ Livre 73
 </figure>
 -->
 
-  <!--Livre 76
+    <!--Livre 76
 <figure>
   <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
   <figcaption>
@@ -1252,9 +1226,9 @@ Livre 73
   <figcaption>
     19,00€
   </figcaption>
-</figure>
-</div>
--->
+</figure>-->
+  </div>
+
 
   <!--  <div class="booksLine">
 Livre 77
